--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -38,3 +38,22 @@ i,
 em {
   font-style: normal;
 }
+
+/* 隐藏浏览器自带的滚动条 */
+::-webkit-scrollbar {
+  width: 0; /* 调整滚动条宽度 */
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent; /* 设置滚动条轨道背景色为透明 */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2); /* 设置滚动条滑块颜色 */
+  border-radius: 0.25em; /* 设置滚动条滑块圆角 */
+}
+
+/* 显示页面内的滚动条 */
+.scrollable-content {
+  overflow-y: auto; /* 启用垂直滚动条 */
+}
